Fix z-index issue where floating social buttons were placed beneath an invisible container element.
Fixes https://github.com/INN/largo/issues/1576

--- a/less/inc/single.less
+++ b/less/inc/single.less
@@ -383,7 +383,7 @@ h2.subtitle {
 #floating-social-buttons {
   transition: opacity 0.2s;
   border: 1px solid @grayLighter;
-  z-index: 0;
+  z-index: 1;
 
   .hidden-phone {
     display: none;
